AC_INIT(
  [abstractdark-sddm-theme],
  [20170422],
  [https://github.com/drawnwren/abstractdark-sddm-theme/issues],
  [abstractdark-sddm-theme],
  [https://github.com/drawnwren/abstractdark-sddm-theme]
)

AM_INIT_AUTOMAKE([no-dist-gzip dist-xz foreign])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
